Metaballs as particles with particle texture (size influence) crashes Blender #36076

Closed
opened 2013-07-09 20:47:03 +02:00 by Frederik Steinmetz · 3 comments

%%%--- Operating System, Graphics card ---

Windows 7, 64 Bit.
GeForce 560Ti

- Blender version with error, and version that worked ---

Errors in 2.66, 2.67 (official)
Working: none

- Short description of error ---

When I use a particle system with a mesh as particle render, I can influence the size over time. But when I switch the mesh to a metaball and let the particles run through another meta surface, sooner or later Blender crashes. Not right away, but if you press Flip color ramp, ALT + A, SHIFT + Left Arrow or scrub the timeline Blender crashed about every minute of doing things.

This only occurs when using particle influence textures and metaballs combined, both options on their own worked fine.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

New Meta Plane
New Meta Ball
Plane with a particle system
Add a blend texture, coordinates: Strand / Particle
Influence: Size
Set the Render object to be the metaball
Press SHIFT + Left Arrow or scrub the timeline, sooner or later my version crashes.
%%%

%%%--- Operating System, Graphics card --- Windows 7, 64 Bit. GeForce 560Ti - Blender version with error, and version that worked --- Errors in 2.66, 2.67 (official) Working: none - Short description of error --- When I use a particle system with a mesh as particle render, I can influence the size over time. But when I switch the mesh to a metaball and let the particles run through another meta surface, sooner or later Blender crashes. Not right away, but if you press Flip color ramp, ALT + A, SHIFT + Left Arrow or scrub the timeline Blender crashed about every minute of doing things. This only occurs when using particle influence textures and metaballs combined, both options on their own worked fine. - Steps for others to reproduce the error (preferably based on attached .blend file) --- New Meta Plane New Meta Ball Plane with a particle system Add a blend texture, coordinates: Strand / Particle Influence: Size Set the Render object to be the metaball Press SHIFT + Left Arrow or scrub the timeline, sooner or later my version crashes. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev58147. Thanks for the report, closing.%%%

%%%Fixed in svn rev58147. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36076
No description provided.